--- a/code/chap09ex.ipynb
+++ b/code/chap09ex.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,29 +764,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "class DiffMeansResample(DiffMeansPermute):\n",
+    "    \"\"\"Tests a difference in means using resampling.\"\"\"\n",
+    "    \n",
+    "    def RunModel(self):\n",
+    "        \"\"\"Run the model of the null hypothesis.\n",
+    "\n",
+    "        returns: simulated data\n",
+    "        \"\"\"\n",
+    "        group1 = np.random.choice(self.pool, self.n, replace=True)\n",
+    "        group2 = np.random.choice(self.pool, self.m, replace=True)\n",
+    "        return group1, group2\n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "def RunResampleTest(firsts, others):\n",
+    "    \"\"\"Tests differences in means by resampling.\n",
+    "\n",
+    "    firsts: DataFrame\n",
+    "    others: DataFrame\n",
+    "    \"\"\"\n",
+    "    data = firsts.prglngth.values, others.prglngth.values\n",
+    "    ht_resample = DiffMeansResample(data)\n",
+    "    p_value_resample = ht_resample.PValue(iters=10000)\n",
+    "    print('\\ndiff means resample preglength')\n",
+    "    print('p-value =', p_value_resample)\n",
+    "    print('actual =', ht_resample.actual)\n",
+    "    print('ts max =', ht_resample.MaxTestStat())\n",
+    "    ht_permute = DiffMeansPermute(data)\n",
+    "    p_value_permute = ht_permute.PValue(iters=10000)\n",
+    "    print('\\ndiff means resample preglength')\n",
+    "    print('p-value =', p_value_permute)\n",
+    "    print('actual =', ht_permute.actual)\n",
+    "    print('ts max =', ht_permute.MaxTestStat())\n",
+    "\n",
+    "    data = (firsts.totalwgt_lb.dropna().values,\n",
+    "            others.totalwgt_lb.dropna().values)\n",
+    "    ht = DiffMeansPermute(data)\n",
+    "    p_value = ht.PValue(iters=10000)\n",
+    "    print('\\ndiff means resample birthweight')\n",
+    "    print('p-value =', p_value)\n",
+    "    print('actual =', ht.actual)\n",
+    "    print('ts max =', ht.MaxTestStat())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "diff means resample preglength\n",
+      "p-value = 0.1715\n",
+      "actual = 0.07803726677754952\n",
+      "ts max = 0.25376267823467913\n",
+      "\n",
+      "diff means resample preglength\n",
+      "p-value = 0.1739\n",
+      "actual = 0.07803726677754952\n",
+      "ts max = 0.237832974524963\n",
+      "\n",
+      "diff means resample birthweight\n",
+      "p-value = 0.0\n",
+      "actual = 0.12476118453549034\n",
+      "ts max = 0.11991521435111263\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "\n",
+    "RunResampleTest(firsts, others)"
    ]
   },
   {
@@ -815,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
